@@ -712,6 +712,7 @@ class DecimalFormatTest(unittest.TestCase):
             ('', '1.00', '1.00'),
 
             # test alignment and padding
+            ('6', '123', '   123'),
             ('<6', '123', '123   '),
             ('>6', '123', '   123'),
             ('^6', '123', ' 123  '),
@@ -741,7 +742,7 @@ class DecimalFormatTest(unittest.TestCase):
             (',', '-1234567', '-1,234,567'),
             (',', '-123456', '-123,456'),
             ('7,', '123456', '123,456'),
-            ('8,', '123456', '123,456 '),
+            ('8,', '123456', ' 123,456'),
             ('08,', '123456', '0,123,456'), # special case: extra 0 needed
             ('+08,', '123456', '+123,456'), # but not if there's a sign
             (' 08,', '123456', ' 123,456'),
